src/test/deca/extension/syntax/invalid/array_assign_cbracket.deca
// Missing '}' for the declaration of values of an array

{
    int[] a = {4,4;
}